--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,9 +144,12 @@
   @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
 }
 
-.dropdown_link {
-  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
+/* Show the dropdown when toggleDropdown is true */
+.dropdown.block {
+  @apply opacity-100
 }
+
+
 
 /* PromptCard Component */
 .prompt_card {
